kubernetes/apps/networking/oauth2-proxy/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-oauth2-proxy
  namespace: networking
  annotations:
    external-dns.alpha.kubernetes.io/target: ipv4.lildrunkensmurf.com
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: &host "auth.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /oauth2
            backend:
              service:
                name: app-oauth2-proxy
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: auth.lildrunkensmurf.com-tls
